[package]
name = "supabase-rust"
version = "0.1.3"
authors = ["Kacy Fortner <kacy@kacyfortner.com>"]
edition = "2021"
description = "Rust client for Supabase"
repository = "https://github.com/kacy/supabase-rust.git"
homepage = "https://github.com/kacy/supabase-rust"
license = "MIT"

[dev-dependencies]
rand = "0.8"

[dependencies]
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
