[package]
name = "supabase-rust"
version = "0.2.0"
authors = ["Kacy Fortner <kacy@kacyfortner.com>"]
edition = "2021"
description = "Rust client for Supabase"
repository = "https://github.com/kacy/supabase-rust.git"
homepage = "https://github.com/kacy/supabase-rust"
license = "MIT"

[dev-dependencies]
rand = "0.9"

[dependencies]
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.37"
tokio = { version = "1", features = ["full"] }
